# Mistral-oUI-

./: .gitignore  LICENSE  README.md
Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
GeneratedHTML/: index.078912ef-17fd-4999-a790-1f414764bc53.html  index.11c360bd-0e66-4916-a1d2-7156b2a879a1.html  index.14634413-3066-4d6f-bbce-ab485bf4f5c0.html  index.19328a32-b44b-45cd-baa5-d66b15c27bdc.html  index.29aa83f1-e131-4dbd-9335-03fceb81d3f7.html  index.2aff2bf1-59f2-4479-a172-a7306f29f785.html  index.2c1d22ea-c6bb-4644-92fd-80cb7cb63c66.html  index.2c388459-3da9-473b-99e5-fbbe7f28b499.html  index.30bb1918-e49d-4080-8f7e-1b094017a4fe.html  index.321805a9-f513-47e8-a2b9-aa087b221e9a.html  index.3918e349-abae-49e6-a17f-1aa67ec8af27.html  index.3d2e7229-ed46-416b-bd0b-9da55fcbf9c0.html  index.41b39087-2715-401c-9825-9cb1ada2f462.html  index.4218c3ae-e09d-4001-b9ac-e5260d684145.html  index.4a6b181d-a374-41ca-bb5a-465b9c771480.html  index.4c8ede49-eecc-4d9e-adb2-5a79ab1b40dd.html  index.4de4cc06-ba84-4e37-a450-8b5e6c855c6f.html  index.516b39ef-9008-4fdf-b807-7987e15d8ed0.html  index.55be2342-74a6-4980-9cac-3a3ba41211f8.html  index.58373432-96a1-4816-846f-041e20bf531d.html  index.593ccc5e-398c-4178-adb1-c7627b8c098a.html  index.595a20d0-5d94-4722-848f-31b35cc18afb.html  index.60ba6783-1b31-4f61-9a25-0723cf1bfc1c.html  index.6331c293-d36a-4fe6-a372-4bc7d121fb5a.html  (+53 more)
Server/: bun.lockb  index.html  package.json  pyproject.toml
Server/src/: detect.py  index.ts  local_test.py  main.py  types.ts
Server/static/: base.html  loader.html
(+1760 files in other folders)
